# 4C

./: .clang-format  .clang-tidy  .cvsignore  .gitignore  .mailmap  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Dangerfile  LICENSE.md  Makefile.Azusa  Makefile.HPUX10  Makefile.HPUX11  Makefile.HPUX11ita2  Makefile.Sunfire  Makefile.Suse73  Makefile.in  Makefile.objects  Makefile.par  Makefile.personal_path  Makefile.seq  README.makefiles  README.md  TestingFramework.cmake  TestingFrameworkListOfTests.cmake  UnittestingFramework.cmake  adapt_cproject.py  adapt_file_extensions.py  adapt_idea.py  baci-debug-gdb.py  baci.config  baci.files  baci.includes  commit_message  comparison.py  configure  (+34 more)
Unittests/: CMakeLists.txt
Unittests/src/: CMakeLists.txt
Unittests/stubs/: DatFileReader_stub.H  DatFileReader_stub.cpp  dserror_stub.cpp
apps/: CMakeLists.txt
apps/create_rtdfiles/: 4C_create_rtdfiles_base.cpp  4C_create_rtdfiles_utils.cpp  4C_create_rtdfiles_utils.hpp  4C_create_rtdfiles_wrapper.cpp  4C_create_rtdfiles_wrapper.hpp  CMakeLists.txt  baci_create_rtdfiles_base.cpp  baci_create_rtdfiles_utils.H  baci_create_rtdfiles_utils.cpp  baci_create_rtdfiles_utils.hpp  baci_create_rtdfiles_wrapper.cpp  baci_create_rtdfiles_wrapper.hpp
apps/global_full/: 4C_global_full_baci.cpp  4C_global_full_cal_control.cpp  4C_global_full_control.cpp  4C_global_full_init_control.cpp  4C_global_full_init_control.hpp  4C_global_full_inp_control.cpp  4C_global_full_inp_control.hpp  4C_global_full_io.cpp  4C_global_full_main.cpp  CMakeLists.txt  baci_global_full_baci.cpp  baci_global_full_cal_control.cpp  baci_global_full_control.cpp  baci_global_full_init_control.H  baci_global_full_init_control.cpp  baci_global_full_init_control.hpp  baci_global_full_inp_control.cpp  baci_global_full_inp_control.hpp
apps/post_monitor/: 4C_post_monitor.cpp  4C_post_monitor.hpp  CMakeLists.txt  baci_post_monitor.cpp  baci_post_monitor.hpp
apps/post_processor/: 4C_post_processor.cpp  4C_post_processor_single_field_writers.cpp  4C_post_processor_single_field_writers.hpp  4C_post_processor_structure_stress.cpp  4C_post_processor_thermo_heatflux.cpp  CMakeLists.txt  baci_post_processor.cpp  baci_post_processor_single_field_writers.H  baci_post_processor_single_field_writers.cpp  baci_post_processor_single_field_writers.hpp  baci_post_processor_structure_stress.cpp  baci_post_processor_thermo_heatflux.cpp
apps/pre_exodus/: 4C_pre_exodus.cpp  4C_pre_exodus.hpp  4C_pre_exodus_centerline.cpp  4C_pre_exodus_centerline.hpp  4C_pre_exodus_readbc.cpp  4C_pre_exodus_readbc.hpp  4C_pre_exodus_reader.cpp  4C_pre_exodus_reader.hpp  4C_pre_exodus_soshextrusion.cpp  4C_pre_exodus_soshextrusion.hpp  4C_pre_exodus_validate.cpp  4C_pre_exodus_validate.hpp  4C_pre_exodus_writedat.cpp  4C_pre_exodus_writedat.hpp  CMakeLists.txt  baci_pre_exodus.cpp  baci_pre_exodus.hpp  baci_pre_exodus_centerline.cpp  baci_pre_exodus_centerline.hpp  baci_pre_exodus_readbc.cpp  baci_pre_exodus_readbc.hpp  baci_pre_exodus_reader.H  baci_pre_exodus_reader.cpp  baci_pre_exodus_reader.hpp  baci_pre_exodus_soshextrusion.cpp  baci_pre_exodus_soshextrusion.hpp  baci_pre_exodus_validate.cpp  baci_pre_exodus_validate.hpp  baci_pre_exodus_writedat.cpp  baci_pre_exodus_writedat.hpp
apps/pre_locsys/: 4C_pre_locsys.cpp  CMakeLists.txt  baci_pre_locsys.cpp
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Doxyfile.tmpl  FindMathJax.cmake  Makefile  README.documentation  ccarat_doc.sty  documentation.conf  dot  doxygen-awesome.css  example1.c  example2.c  example3.c  guidelines.c  index.doc  namespaces.H  namespaces.doc
doc/GS-setup/: GS-setup.lyx
doc/cmake/: FindDoxygen.cmake  FindMathJax.cmake
doc/doxygen/: CMakeLists.txt  Doxyfile.in  index.doc
doc/readthedocs/: 4Csetup.rst  4Csimulation.rst  4Ctesting.rst  CMakeLists.txt  about.rst  analysisguide.rst  appendix.rst  bacisetup.rst  bacisimulation.rst  bacitesting.rst  boundaryconditions.rst  codedesign.rst  codingguidelines.rst  contact.rst  conventions.rst  coverage_report.rst  debugging_profiling.rst  developer_addedinformation.rst  developer_ccache.rst  developer_cluster.rst  developer_cmake.rst  developer_dirstructure.rst  developer_runsimulation.rst  development_parts.rst  developmentguide.rst  doxygen.rst  elementreference.rst  elements.rst  elementsale.rst  elementsartery.rst  elementselectromagnetic.rst  elementsfluid.rst  elementshapes.rst  elementslubrication.rst  elementsreduceddairways.rst  elementsstructure.rst  elementsthermo.rst  elementstransport.rst  elementstransport2.rst  elementtypes.rst  (+32 more)
doc/readthedocs-config/: conf.py.in  requirements.txt
doc/technical_reports/: README  configure
modules/contact_module/: CMakeLists.txt  generate_contact_module.py
src/: .directory  CMakeLists.txt  Makefile  st7UV7A8
src/adapter/: 4C_adapter_ale.cpp  4C_adapter_ale.hpp  4C_adapter_ale_fluid.cpp  4C_adapter_ale_fluid.hpp  4C_adapter_ale_fpsi.cpp  4C_adapter_ale_fpsi.hpp  4C_adapter_ale_fsi.cpp  4C_adapter_ale_fsi.hpp  4C_adapter_ale_fsi_msht.cpp  4C_adapter_ale_fsi_msht.hpp  4C_adapter_ale_wear.cpp  4C_adapter_ale_wear.hpp  4C_adapter_ale_wrapper.cpp  4C_adapter_ale_wrapper.hpp  4C_adapter_ale_xffsi.cpp  4C_adapter_ale_xffsi.hpp  4C_adapter_algorithmbase.cpp  4C_adapter_algorithmbase.hpp  4C_adapter_art_net.hpp  4C_adapter_coupling_ehl_mortar.cpp  4C_adapter_coupling_ehl_mortar.hpp  4C_adapter_coupling_nonlin_mortar.cpp  4C_adapter_coupling_nonlin_mortar.hpp  4C_adapter_coupling_poro_mortar.cpp  4C_adapter_coupling_poro_mortar.hpp  4C_adapter_field.hpp  4C_adapter_field_wrapper.cpp  4C_adapter_field_wrapper.hpp  4C_adapter_fld_base_algorithm.cpp  4C_adapter_fld_base_algorithm.hpp  4C_adapter_fld_fbi_movingboundary.cpp  4C_adapter_fld_fbi_movingboundary.hpp  4C_adapter_fld_fbi_wrapper.cpp  4C_adapter_fld_fbi_wrapper.hpp  (+501 more)
unittests/: 4C_gtest_main_mpi_test.cpp  CMakeLists.txt  README.md  assert_mpi.cpp.in  baci_gtest_main_mpi_test.cpp  gtest_main_mpi.cpp
unittests_deprecated_cxxtest/: CMakeLists.txt  runner.tpl
(+28201 files in other folders)
