# This file is part of 4C multiphysics licensed under the
# GNU Lesser General Public License v3.0 or later.
#
# See the LICENSE.md file in the top-level for license information.
#
# SPDX-License-Identifier: LGPL-3.0-or-later

add_subdirectory(create_rtdfiles)
add_subdirectory(global_full)
add_subdirectory(post_monitor)
add_subdirectory(post_processor)
add_subdirectory(pre_exodus)
add_subdirectory(pre_locsys)
