add_subdirectory(drt_adapter)
add_subdirectory(drt_ale)
add_subdirectory(drt_art_net)
add_subdirectory(drt_beam3)
add_subdirectory(drt_beamcontact)
add_subdirectory(drt_beaminteraction)
add_subdirectory(drt_bele)
add_subdirectory(drt_binstrategy)
add_subdirectory(drt_browniandyn)
add_subdirectory(drt_cardiovascular0d)
add_subdirectory(drt_comm)
add_subdirectory(drt_constraint)
add_subdirectory(drt_contact)
add_subdirectory(drt_contact_aug)
add_subdirectory(drt_contact_constitutivelaw)
add_subdirectory(drt_cut)
add_subdirectory(drt_discsh3)
add_subdirectory(drt_ehl)
add_subdirectory(drt_elch)
add_subdirectory(drt_elemag)
add_subdirectory(drt_fbi)
add_subdirectory(drt_fem_general)
add_subdirectory(drt_fiber)
add_subdirectory(drt_fluid)
add_subdirectory(drt_fluid_ele)
add_subdirectory(drt_fluid_turbulence)
add_subdirectory(drt_fluid_xfluid)
add_subdirectory(drt_fpsi)
add_subdirectory(drt_fs3i)
add_subdirectory(drt_fsi)
add_subdirectory(drt_fsi_xfem)
add_subdirectory(drt_geometric_search)
add_subdirectory(drt_geometry)
add_subdirectory(drt_geometry_pair)
add_subdirectory(drt_immersed_problem)
add_subdirectory(drt_inpar)
add_subdirectory(drt_inv_analysis)
add_subdirectory(drt_io)
add_subdirectory(drt_levelset)
add_subdirectory(drt_lib)
add_subdirectory(drt_loma)
add_subdirectory(drt_lubrication)
add_subdirectory(drt_lubrication_ele)
add_subdirectory(drt_mat)
add_subdirectory(drt_matelast)
add_subdirectory(drt_membrane)
add_subdirectory(drt_mixture)
add_subdirectory(drt_mor)
add_subdirectory(drt_mortar)
add_subdirectory(drt_nurbs_discret)
add_subdirectory(drt_opti)
add_subdirectory(drt_particle_algorithm)
add_subdirectory(drt_particle_engine)
add_subdirectory(drt_particle_interaction)
add_subdirectory(drt_particle_rigidbody)
add_subdirectory(drt_particle_wall)
add_subdirectory(drt_pasi)
add_subdirectory(drt_patspec)
add_subdirectory(drt_poroelast)
add_subdirectory(drt_porofluidmultiphase)
add_subdirectory(drt_porofluidmultiphase_ele)
add_subdirectory(drt_poromultiphase)
add_subdirectory(drt_poromultiphase_scatra)
add_subdirectory(drt_red_airways)
add_subdirectory(drt_rigidsphere)
add_subdirectory(drt_s8)
add_subdirectory(drt_scatra)
add_subdirectory(drt_scatra_ele)
add_subdirectory(drt_so3)
add_subdirectory(drt_spring3)
add_subdirectory(drt_ssi)
add_subdirectory(drt_ssti)
add_subdirectory(drt_sti)
add_subdirectory(drt_stru_multi)
add_subdirectory(drt_struct_ale)
add_subdirectory(drt_structure)
add_subdirectory(drt_structure_new)
add_subdirectory(drt_structure_xstructure)
add_subdirectory(drt_surfstress)
add_subdirectory(drt_thermo)
add_subdirectory(drt_timestepping)
add_subdirectory(drt_torsion3)
add_subdirectory(drt_truss3)
add_subdirectory(drt_truss3cl)
add_subdirectory(drt_tsi)
add_subdirectory(drt_tutorial)
add_subdirectory(drt_two_phase_flow)
add_subdirectory(drt_volmortar)
add_subdirectory(drt_w1)
add_subdirectory(drt_wear)
add_subdirectory(drt_xfem)
add_subdirectory(fortran)
add_subdirectory(global_full)
add_subdirectory(headers)
add_subdirectory(linalg)
add_subdirectory(loca_continuation)
add_subdirectory(post_drt_common)
add_subdirectory(post_ensight)
add_subdirectory(post_monitor)
add_subdirectory(post_s8convert)
add_subdirectory(post_vtk)
add_subdirectory(pre_exodus)
add_subdirectory(pre_locsys)
add_subdirectory(pss_full)
add_subdirectory(rebalance)
add_subdirectory(solver)
add_subdirectory(solver_nonlin_nox)
