add_subdirectory(adapter)
add_subdirectory(ale)
add_subdirectory(art_net)
add_subdirectory(beam3)
add_subdirectory(beamcontact)
add_subdirectory(beaminteraction)
add_subdirectory(bele)
add_subdirectory(binstrategy)
add_subdirectory(browniandyn)
add_subdirectory(cardiovascular0d)
add_subdirectory(config)
add_subdirectory(constraint)
add_subdirectory(constraint_framework)
add_subdirectory(contact)
add_subdirectory(contact_aug)
add_subdirectory(contact_constitutivelaw)
add_subdirectory(core)
add_subdirectory(cut)
add_subdirectory(ehl)
add_subdirectory(elch)
add_subdirectory(elemag)
add_subdirectory(fbi)
add_subdirectory(fiber)
add_subdirectory(fluid)
add_subdirectory(fluid_ele)
add_subdirectory(fluid_turbulence)
add_subdirectory(fluid_xfluid)
add_subdirectory(fpsi)
add_subdirectory(fs3i)
add_subdirectory(fsi)
add_subdirectory(fsi_xfem)
add_subdirectory(geometry_pair)
add_subdirectory(global_data)
add_subdirectory(global_legacy_module)
add_subdirectory(immersed_problem)
add_subdirectory(inpar)
add_subdirectory(io)
add_subdirectory(levelset)
add_subdirectory(lib)
add_subdirectory(loma)
add_subdirectory(lubrication)
add_subdirectory(lubrication_ele)
add_subdirectory(mat)
add_subdirectory(matelast)
add_subdirectory(membrane)
add_subdirectory(mixture)
add_subdirectory(module_registry)
add_subdirectory(mor)
add_subdirectory(mortar)
add_subdirectory(nurbs_discret)
add_subdirectory(particle_algorithm)
add_subdirectory(particle_engine)
add_subdirectory(particle_interaction)
add_subdirectory(particle_rigidbody)
add_subdirectory(particle_wall)
add_subdirectory(pasi)
add_subdirectory(poroelast)
add_subdirectory(poroelast_scatra)
add_subdirectory(porofluidmultiphase)
add_subdirectory(porofluidmultiphase_ele)
add_subdirectory(poromultiphase)
add_subdirectory(poromultiphase_scatra)
add_subdirectory(red_airways)
add_subdirectory(rigidsphere)
add_subdirectory(scatra)
add_subdirectory(scatra_ele)
add_subdirectory(shell7p)
add_subdirectory(so3)
add_subdirectory(solid_ele)
add_subdirectory(solid_poro_ele)
add_subdirectory(solid_scatra_ele)
add_subdirectory(ssi)
add_subdirectory(ssti)
add_subdirectory(sti)
add_subdirectory(stru_multi)
add_subdirectory(struct_ale)
add_subdirectory(structure)
add_subdirectory(structure_new)
add_subdirectory(thermo)
add_subdirectory(timestepping)
add_subdirectory(torsion3)
add_subdirectory(truss3)
add_subdirectory(tsi)
add_subdirectory(w1)
add_subdirectory(wear)
add_subdirectory(xfem)
add_subdirectory(post)
add_subdirectory(solver_nonlin_nox)
