# Build the common test functionality
add_subdirectory(common)

# List all test directories here
add_subdirectory(beam3)
add_subdirectory(beaminteraction)
add_subdirectory(comm)
add_subdirectory(contact_constitutivelaw)
add_subdirectory(fbi)
add_subdirectory(geometry)
add_subdirectory(geometry_pair)
add_subdirectory(inpar)
add_subdirectory(io)
add_subdirectory(lib)
add_subdirectory(mat)
add_subdirectory(matelast)
add_subdirectory(mixture)
add_subdirectory(mortar)
add_subdirectory(particle_engine)
add_subdirectory(particle_interaction)
add_subdirectory(particle_rigidbody)
add_subdirectory(poromultiphase_scatra)
add_subdirectory(so3)
add_subdirectory(solid_ele)
add_subdirectory(headers)
